--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -58,9 +61,9 @@
         <div class="user-form">
           <i class="fa-solid fa-user">
             <ul class="list-user">
-              <li>a</li>
-              <li>b</li>
-              <li>a</li>
+              <li><a class="link-user" href="">đăng ký</a></li>
+              <li><a class="link-user" href="">đăng nhập</a></li>
+              <li><a class="link-user" href="">đăng xuất</a></li>
             </ul>
           </i>
           <i class="fa-solid fa-shop"></i>
