--- a/admin/admin.html
+++ b/admin/admin.html
@@ -17,7 +17,7 @@
         <a href="" class="active">Danh mục sản phẩm</a>
         <ul class="list-admin">
           <li><a href="CategoryAdd.php">Thêm danh mục</a></li>
-          <li><a href="BrandAdd.html">Thêm nhãn sản phẩm</a></li>
+          <li><a href="BrandAdd.php">Thêm nhãn sản phẩm</a></li>
           <li><a href="ProductAdd.html">Thêm sản phẩm</a></li>
         </ul>
       </div>
