--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,7 +18,7 @@
         <ul class="list-admin">
           <li><a href="CategoryAdd.php">Thêm danh mục</a></li>
           <li><a href="BrandAdd.php">Thêm nhãn sản phẩm</a></li>
-          <li><a href="ProductAdd.html">Thêm sản phẩm</a></li>
+          <li><a href="ProductAdd.php">Thêm sản phẩm</a></li>
         </ul>
       </div>
     </div>
